[BGPT] fix virtual/threaded/fast/events/touch/gesture/gesture-scrollbar-mainframe.html

This test failing is because:

1. In cc gen property tree, we create non-scrollable scroll node for scrollbar
   and set it as child of a no scrollable scroll node.
2. In LayerTreeHostImpl::IsInitialScrollHitTestReliable, we return false
   (fallback to main thread scroll) when it does not have a closest_scroll_node
   (scroll node and it's ancestor nodes do not scrollable).
3. In blink gen property tree, we do not create the scroll node for scrollbar so
   closest_scroll_node is the scroll node of scrollable which owns the
   scrollbar. Then the scrolling process in impl thread and scroll on the
   scrollable.

In this patch we return scroll fallback to main thread with scrollbar scrolling
reason if the scroll hit testing layer is scrollbar and from touch before
LayerTreeHostImpl::IsInitialScrollHitTestReliable.

Bug: 884846
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_layout_ng;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ia1b2bb996879b4de75b5f84a7a94c73676bbcb23
Reviewed-on: https://chromium-review.googlesource.com/1243164
Reviewed-by: enne <enne@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595143}
Former-commit-id: d2a75ab847608225d2044bce95398fb2905d798f